Pletor-canvas/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pletor
  labels:
    app: pletor
